// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IndexField it renders correctly with field.value + options + showAsLink 1`] = `
<div>
  <div>
    <!---->
  </div>
  <div>
    <!---->
  </div>
  <div>
    <router-link-stub to="[object Object]" class="no-underline dim text-primary font-bold">
      Three
    </router-link-stub>
  </div>
</div>
`;

exports[`IndexField it renders correctly with field.value + options 1`] = `
<div>
  <div>
    <!---->
  </div>
  <div>
    <!---->
  </div>
  <div><span class="text-left">Three</span></div>
</div>
`;

exports[`IndexField it renders correctly without field.value 1`] = `<span class="whitespace-no-wrap text-left">—</span>`;
